# Personal-Assistant

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt
docs/: README.md
personal_assistant/: requirements.txt
personal_assistant/contacts/: forms.py  models.py  urls.py  views.py
personal_assistant/contacts/migrations/: 0001_initial.py  0002_alter_contact_birthday.py  0003_alter_contact_address_alter_contact_birthday_and_more.py
personal_assistant/pa_contacts/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/pa_contacts/migrations/: 0001_initial.py  0003_contact_user.py
personal_assistant/pa_core/: context_processors.py  forms.py  urls.py  views.py
personal_assistant/pa_file/: apps.py  forms.py  models.py  settings.py  urls.py  views.py
personal_assistant/pa_file/migrations/: 0001_initial.py
personal_assistant/pa_file/templates/: file_list.html  upload.html
personal_assistant/pa_fileCloud/: forms.py  models.py  urls.py  views.py
personal_assistant/pa_fileCloud/templates/: file_list.html  upload.html
personal_assistant/pa_news/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
personal_assistant/pa_news/migrations/: 0001_initial.py
personal_assistant/pa_note/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/pa_note/migrations/: 0001_initial.py  0002_alter_note_description.py  0002_note_tags.py  0003_note_tags.py
personal_assistant/pa_tag/: apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/pa_tag/migrations/: 0001_initial.py
personal_assistant/pa_user/: apps.py  forms.py  signals.py  urls.py  views.py
personal_assistant/personal_assistant/: settings.py  urls.py
(+34 files in other folders)
