[tool.poetry]
name = "personal-assistant"
version = "0.8.0"
description = "It assists you in organizing the phone book, creating notes, and more."
authors = [
    "Illia Trubnikov <illyatr25@gmail.com>",
    "Nataly Sholohova <n.sholohova27@gmail.com>",
    "Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
